# Genshi-BASIC

./: .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  LICENSE.txt  Process.md  README.md  genshiBASIC.grammar  genshibasic.py  setup.cfg  setup.py  test.bas  test.py  usage.py  workspace.py
BASIC-programs/: beer.bas  binary.bas  factorial.bas  test.txt
GenshiBASIC/: Constants.py  Expression.py  GenshiBASIC.py  Interpreter.py  Lexer.py  Node.py  Parser.py  Stack.py  Token.py  Utils.py  Warnings.py  genshiBASIC.grammar
GenshiBASIC-Programs/: binary.bas  comment.bas  factorial.bas  fizzbuzz.bas  functions.bas  test.bas  test.txt
GenshiBas/: GenshiBas.py  Lexer.py  Utils.py
archive/GenshiBASIC/: GenshiBASIC.py  Node.py
archive/GenshiBASIC/tests/: test_lexer.py
archive/examples/: numbers.bas
archived/GenshiBASIC/: Stack.py  __init__.py
archived/GenshiBASIC/tests/: test_interpreter.py
dev/: _workspace.py  backup_parser.py  gotchas.txt  run-testcase.ps1  run-tests.bat  run-tests.sh
docs/: genshi-BASIC.ebnf
docs/archived/: README.md
docs/archived/GenshiBASIC/: Parser.py  Utils.py
docs/archived/examples/: fizzbuzz.bas
genshibasic/: definitions.py  genshi.py  interpreter.py  lexer.py  parser.py  program.py  stack.py  token.py
lib/: setup.py
lib/GenshiBASIC/: Constants.py  Expression.py  Functions.py  GenshiBASIC.py  Interpreter.py  Lexer.py  Node.py  Parser.py  Stack.py  Utils.py  Warnings.py
programs/: badquote.bas  fizzbuzz.bas  functions.bas  test.bas
test/: test_lexer.py  test_parser.py
tests/: context.py  test_lexer.py  test_parser.py
(+5 files in other folders)
