[metadata]
name = genshibasic
version = 0.1.0
description = Genshi BASIC interpreter
long_description = file: README.md
author = Barrett Otte
author_email = barrettotte@gmail.com
url = https://github.com/barrettotte/Genshi-BASIC
license = file: LICENSE

[options]
packages = find:
python_requires = ~=3.6

[options.packages.find]
exclude =
    tests
    docs

[bdist_wheel]
universal = 1
